--- a/src/app/client/component/songslider/songslider.component.html
+++ b/src/app/client/component/songslider/songslider.component.html
@@ -4,9 +4,8 @@
 
   <ngx-slick-carousel class="carousel homebanner" #slickModal="slick-carousel" [config]="slideConfigbanner" >
     <div ngxSlickItem *ngFor="let slide of slides" class="slide">
-      
       <div class="box">
-        <a (click)="opensong()">
+        <a routerLink="songbox">
        <img src="{{ slide.img }}" alt="" width="100%"  class="song_image"/>
     </a>
       </div>
@@ -17,7 +16,7 @@
   <ngx-slick-carousel class="carousel main_sub_slider" #slickModal="slick-carousel" [config]="slideConfig" >
     <div ngxSlickItem *ngFor="let slide of slides" class="slide">
       <div class="box">
-        <a (click)="opensong()">
+        <a routerLink="songbox">
       <img src="{{ slide.img }}" alt="" width="100%"  class="song_image"/>
       <div class="t_wrap">
         {{slide.song_name}}
@@ -32,7 +31,7 @@
   <ngx-slick-carousel class="carousel main_sub_slider" #slickModal="slick-carousel" [config]="slideConfig" >
     <div ngxSlickItem *ngFor="let slide of slides" class="slide">
       <div class="box">
-        <a (click)="opensong()">
+        <a routerLink="songbox">
       <img src="{{ slide.img }}" alt="" width="100%"  class="song_image"/>
       <div class="t_wrap">
         {{slide.song_name}}
@@ -46,7 +45,7 @@
   <ngx-slick-carousel class="carousel song_artists" #slickModal="slick-carousel" [config]="slideConfig" >
     <div ngxSlickItem *ngFor="let slide of artists" class="slide">
       <div class="box">
-        <a (click)="opensong()">
+        <a routerLink="songbox">
       <img src="{{ slide.img }}" alt="" width="100%"  class="song_image"/>
       <div class="t_wrap">
         {{slide.song_name}}
