--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
-<app-mainsection></app-mainsection>
+<!-- <app-mainsection></app-mainsection> -->
+<router-outlet></router-outlet>
 <app-footer></app-footer>
 <app-songdetail></app-songdetail>
