--- a/src/app/client/component/footer/footer.component.scss
+++ b/src/app/client/component/footer/footer.component.scss
@@ -3,7 +3,7 @@
 @import "/src/cmn-scss/mixin.scss";
 .footer{
     background-color: #fafafb;
-    padding: 0 45px;
+    padding: 45px;
     .footer_top{
         padding: 10px 0;
         text-align: center;
