--- a/src/app/client/component/header/header.component.scss
+++ b/src/app/client/component/header/header.component.scss
@@ -9,23 +9,29 @@
   background-color: color(primary-color);
   padding: 10px 60px;
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
   align-items: center;
-  z-index: 1;
+  z-index: 2;
   height: 75px;
   .logo{
     width: 10%;
+    @include ipad-view{
+      width: 15%;
+    }
     img{
-      width: 90px;
+      width: 80px;
     }
   }
   .search{
-    width: 70%;
+    width: 60%;
     justify-self: flex-start;
     position: relative;
+    @include ipad-view{
+      width: 65%;
+    }
     .input-group{
       .input_search{
-        border: 1px solid color(secondary-color);       
+        border-radius: 20px;      
       }
       .btn{
         color: color(secondary-color);
@@ -44,12 +50,15 @@
       z-index: 999;
       // min-height: 100px;
       background-color: #fff;
-      box-shadow: 0 0 3px 3px rgba(0,0,0,.1);
-      border-radius: 6px;
+      border: 1px solid #ced4da;
+      border-radius: 20px;
       padding: 10px;
       &.visited{
         display: block;
       }
+      ul{
+        padding: 0;
+      
       .song_detail{
         width: 50%;
         float:left;
@@ -66,6 +75,7 @@
             height: 50px;
             margin-right: 10px;
             background-color: #ddd;
+            border-radius: 6px;
             img{
                 max-width: 100%;
                 border-radius: 6px;
@@ -87,14 +97,19 @@
         }}
       }
     }
+    }
   }
   .login_box{
     text-align: right;
-    width: 20%;
+    width: 30%;
+    @include ipad-view{
+      width: 20%;
+    }
     .profile{
       display: none;
       width: 40px;
-      height: 40px;      
+      height: 40px; 
+      cursor: pointer;     
       img{
        width: 100%;
        height: 100%;
@@ -104,6 +119,11 @@
       .dropdown-menu{
         z-index: 2;
       }   
+    }
+    .login_text{
+      text-transform: capitalize;
+      font-size: 15px;
+      cursor: pointer;
     }
     .loging_s{
       display: block;
