--- a/src/app/client/pages/songbox/songbox.component.scss
+++ b/src/app/client/pages/songbox/songbox.component.scss
@@ -1,4 +1,3 @@
-
 .slick-slider {
     width: 100%;
     margin: auto;
@@ -20,7 +19,6 @@ body .slick-next {
         color: #000;
         text-decoration: none;
         display: inline-block;
-        width: 100%;
       }
       .song_image{
         height: 100%;
@@ -48,30 +46,41 @@ body .slick-next {
         }
     }
 }
-.song_artists{
-    .slide{
-        .box{
-            .song_image{
-                border-radius: 50%;
-                width: 160px;
-                height: 160px;
-                margin: 0 auto;
-                display: block;
-                img{
-                    max-width: 100%;
-                }
+.play_song_box{
+    width: 100%;
+    height: 100%;
+    padding: 45px;
+    background: #d5d1d2;
+    position: relative;
+    transition: 0.5s all;
+    .play_detail{
+        width: 50%;
+        display: flex;
+        align-items: flex-end;
+        margin-bottom: 40px;
+        .song_img{
+            width: 300px;
+            height: auto;
+            margin-bottom: 10px;
+            margin-right: 30px;
+            img{
+                width: 100%;
+               box-shadow: 0 0 3px 3px rgba(0,0,0,.1);
             }
-                .t_wrap{
-                    margin-top: 5px;
-                    text-align: center;
-                    font-weight: 600;
+        }
+        .detail{
+            margin-bottom: 10px;
+            .song_name{
+                font-size: 22px;
+                color: #000;
+                font-weight: 700;
                 text-transform: capitalize;
-                color: color(pure-black);
-                }
+            }
+            .artist_name{
+                color: brown;
+                text-transform: capitalize;
+                margin-bottom: 10px;
+            }
         }
     }
-}
-
-.song_types_title{
-    font-size: 24px;
 }
