--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,7 @@ body {
   position: relative;
   outline: none;
   box-sizing: border-box;
+  font-family: Arial;
 }
 .go_regster{
   text-align: center;
